Task2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metrics
  labels:
    name: metrics
