Task2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scaletestapp
  namespace: metrics
  labels:
    app: scaletestapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scaletestapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: scaletestapp
    spec:
      containers:
        - name: scaletestapp
          image:  ghcr.io/yandex-practicum/scaletestapp:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "50m"
              memory: "10Mi"
            requests:
              cpu: "10m"
              memory: "5Mi"
          readinessProbe:
            httpGet:
              path: /metrics
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      restartPolicy: Always
      imagePullSecrets:
        - name: dockerconfigjson
---
apiVersion: v1
kind: Service
metadata:
  name: scaletestapp
  namespace: metrics
spec:
  selector:
    app: scaletestapp
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
